--- a/aboutus.html
+++ b/aboutus.html
@@ -7,33 +7,74 @@
 </head>
 
 <body>
+
 <div id="container">
+
 <div id="topBox">
-<header><img src="header.jpg" width="900" height="150" alt=""/></header>
+  
+  <header><img src="header.jpg" width="900" height="150" alt=""/></header>
+
 <nav id="navigationTop">
-     <ul>
-<li><a href="index.html">Home</a></li>
-<li><a href="announcements.html">Announcements</a></li>
-<li><a href="mainParty.html">Party</a></li>
-<li><a href="costumes.html">Costumes</a></li>
-<li><a href="contacts.html">Contacts</a></li></ul>
-</nav></div>
-
-<div id="aboutUsNav">
-<nav id="insideNav"> <ul>
-<li><a href="whatIs.html">What Is CossiePlay?</a></li>
-<li><a href="whosWho.html">CossiePlay Family</a></li>
-<li><a href="partyGuidelines.html">Party Guidelines</a></li>
-</ul></nav></div>
-
-<div id="aboutUsBox">
-<h2>About CossiePlay</h2>
-
-<p>CossiePlay is a family-run business, operating in Hulkstown since 2012. Cosplayers can order any kind of costume - from simple Spiderman or elf costumes right up to costumes including advanced features like armour, animatronics, realistic weaponry and working force fields. Depending on the difficulty, costumes take between 1 and 50 weeks and cost between $10 and $10,000.
-We buy and sell second-hand costumes (a price list is available) as well, Visit <a href="costumes.html">Costumes</a> tab.
- 
-</p>
+     <ul>    
+          <li><a href="index.html">Home</a></li>
+          <li><a href="whatIs.html">What Is Cosplay?</a></li>
+          <li><a href="signUp.html">Sign Up</a></li>
+          <li><a href="costumes.html">Costumes Shop</a></li>
+          <li><a href="announcements.html">Announcements</a></li>
+          <li><a href="aboutus.html">About Us</a></li>
+     </ul>
+</nav>
 </div>
 
-</body></div>
+<h1> About Us </h1>
+
+<div id="aboutUsLeftPartySection">
+  <h3><a href="signUp.html">Sign Up! </a><em>its easy.</em></h3>
+    <h3>Just email us</h3>
+      <strong>Email: cossieplay@gmail.com</strong>
+  
+  <ul>  
+         <li><em>Include:</em></li>
+         <li>Your Name</li>
+         <li>Phone Number</li>
+         <li>How many people are coming</li>
+  </ul>
+  <img src="book-fair-678264_1280.jpg" width="250" height="167" alt=""/> 
+
+<h3> Contacts </h3>
+ 
+<ul>
+    <li> Phone: 07 4771 1234</li>
+    <li> Fax: 07-4771 1235</li>
+    <li> Address: 4 Stanton Avenue, Hulkstwon</li>
+    <li> Email: cossieplay@ gmail.com.</li>
+</ul>
+
+</div>
+
+<div id="aboutUsBox">
+
+<h2>About CossiePlay</h2>
+
+<p>CossiePlay is a family-run business, operating in Hulkstown since 2012. <strong> Cosplayers can order any kind of costume </strong> - from simple Spiderman or elf costumes right up to costumes including advanced features like armour, animatronics, realistic weaponry and working force fields. Depending on the difficulty, <em> costumes take between 1 and 50 weeks and cost between $10 and $10,000. </em> <br>
+<strong> We buy and sell second-hand costumes </strong>, <em> Visit </em> <a href="costumes.html">Costumes</a> tab to views these.
+ 
+</p>
+<br>
+<h2>Who's Who</h2>
+
+<h3> <strong> The CossiePlay family is </strong> </h3>
+
+<p> <strong> Steven Rogers – </strong> Steve was a Navy Seal for 37 years before getting interested in hosting parties and helping people enjoy their fantasies together in a family-friendly fun environment.</p>
+
+<img src="SteveRogers.jpg" width="200" height="150" alt=""/>
+
+<p> <strong> Sally Rogers – </strong> After only 6 weeks of her first dress-making course, Sally was already designing and sewing elaborate ball gowns and costumes that amazed her instructors. 10 years later and she’s making even more amazing creations for happy customers.
+  (our photos are provided)</p>
+
+<img src="SallyRogers.jpg" width="200" height="239" alt=""/>
+
+</div>
+</div> 
+</body>
 </html>
