--- a/announcements.html
+++ b/announcements.html
@@ -7,27 +7,65 @@
 </head>
 
 <body>
+
 <div id="container">
+
 <div id="topBox">
-<header><img src="header.jpg" width="900" height="150" alt=""/></header>
+  
+  <header><img src="header.jpg" width="900" height="150" alt=""/></header>
+
 <nav id="navigationTop">
-     <ul>
-<li><a href="index.html">Home</a></li>
-<li><a href="mainParty.html">Party</a></li>
-<li><a href="costumes.html">Costumes</a></li>
-<li><a href="aboutus.html">About Us</a></li>
-<li><a href="contacts.html">Contacts</a></li></ul>
-</nav></div>
+     <ul>    
+          <li><a href="index.html">Home</a></li>
+          <li><a href="whatIs.html">What Is Cosplay?</a></li>
+          <li><a href="signUp.html">Sign Up</a></li>
+          <li><a href="costumes.html">Costumes Shop</a></li>
+          <li><a href="announcements.html">Announcements</a></li>
+          <li><a href="aboutus.html">About Us</a></li>
+     </ul>
+</nav>
+</div>
 
+<h1> Announcements </h1>
 
-<h2> Announcements </h2>
+<div id="leftSignUpSection">
+  <h3><a href="signUp.html">Sign Up! </a><em>its easy.</em></h3>
+    <h3>Just email us</h3>
+      <strong>Email: cossieplay@gmail.com</strong>
+  
+  <ul>  
+         <li><em>Include:</em></li>
+         <li>Your Name</li>
+         <li>Phone Number</li>
+         <li>How many people are coming</li>
+  </ul>
+  
+  <img src="book-fair-678264_1280.jpg" width="250" height="167" alt=""/> 
+ 
+ <h3> Contacts </h3>
+ 
+   <ul>
+     <li> Phone: 07 4771 1234</li>
+     <li> Fax: 07-4771 1235</li>
+     <li> Address: 4 Stanton Avenue, Hulkstwon</li>
+     <li> Email: cossieplay@ gmail.com.</li>
+   </ul>
 
-<h3>Cool things to know about</h3>
+  </div>
 
-<p>this month you can purchase 3 drinks for the price of 2 at the bar.</p>
-<p>First-time party-goers get a 50% discount on entry</p>
-<p>If you get a costume custom made, your next party entry is free if you wear that costume.</p>
-<p>Wear your costume in to KFC on Stanton street and you can get a free drink with a 21-piece bucket. Tell them you’ve been to CossiePlay!</p>
+<div id="announcements">
+
+<h2>Cool things to know about</h2>
+
+   <ul>
+     <li> <strong> This month you can purchase </strong> 3 drinks for the price of 2 at the bar.</li><br>
+     <li> First-time party-goers <strong> get a 50% discount </strong> on entry</li><br>
+     <li> <strong> If you get a costume custom made, </strong> your next party entry is free if you wear that costume.</li><br>
+     <li> <strong> Wear your costume in to KFC on Stanton street </strong> 
+         and you can get a free drink with a 21-piece bucket. <strong> Tell them you’ve been to CossiePlay! </strong></li>
+   </ul>
+
+</div>
 
 </div>
 </body>
