--- a/index.html
+++ b/index.html
@@ -7,45 +7,80 @@
 </head>
 
 <body>
+
 <div id="container">
+
 <div id="topBox">
-<header><img src="header.jpg" width="900" height="150" alt=""/></header>
+  
+  <header><img src="header.jpg" width="900" height="150" alt=""/></header>
+
 <nav id="navigationTop">
-     <ul>
-<li><a href="announcements.html">Announcements</a></li>
-<li><a href="mainParty.html">Party</a></li>
-<li><a href="costumes.html">Costumes</a></li>
-<li><a href="aboutus.html">About Us</a></li>
-<li><a href="contacts.html">Contacts</a></li></ul>
-</nav></div>
+     <ul>    
+          <li><a href="index.html">Home</a></li>
+          <li><a href="whatIs.html">What Is Cosplay?</a></li>
+          <li><a href="signUp.html">Sign Up</a></li>
+          <li><a href="costumes.html">Costumes Shop</a></li>
+          <li><a href="announcements.html">Announcements</a></li>
+          <li><a href="aboutus.html">About Us</a></li>
+     </ul>
+</nav>
+</div>
 
 <h1>Come Party at CossiePlay!</h1>
 
-<div id="leftPartySection">
-<h3>Sign-Up! its easy.</h3>
-  <h3>Just email us.</h3>
-  <ul>   <li><strong>cossieplay@gmail.com</strong></li>
+<div id="leftSignUpSection">
+  <h3><a href="signUp.html">Sign Up! </a><em>its easy.</em></h3>
+    <h3>Just email us</h3>
+      <strong>Email: cossieplay@gmail.com</strong>
+  
+  <ul>  
          <li><em>Include:</em></li>
          <li>Your Name</li>
          <li>Phone Number</li>
-         <li>How many people are coming</li></ul>
-  <img src="book-fair-678264_1280.jpg" width="250" height="167" alt=""/> </div>
+         <li>How many people are coming</li>
+  </ul>
+  
+  <img src="book-fair-678264_1280.jpg" width="250" height="167" alt=""/> 
+ 
+ <h3> Contacts </h3>
+ 
+ <ul>
+     <li> Phone: 07 4771 1234</li>
+     <li> Fax: 07-4771 1235</li>
+     <li> Address: 4 Stanton Avenue, Hulkstwon</li>
+     <li> Email: cossieplay@ gmail.com.</li>
+ </ul>
 
-<div id="rightSignUpSection">
-<h3> “CossiePlay Party” at the town hall.<br>On the first Saturday of every month! </h3>
+  </div>
+
+<div id="rightPartyInfoSection">
+
+<h3> CossiePlay <a href="signUp.html"> Party </a> </h3>
+    <ul>
+      <li> Location: town hall </li>
+      <li> 4 Stanton Avenue </li>
+      <li> Hulkstwon </li>
+    </ul>
+  
+<h3>On the first Saturday of every month! </h3>
+
 <img src="party.jpg" width="250" height="187" alt=""/>
-<p><em>We have some cool things happening that we want you to know about!<br><br><strong> Visit our Announcement Tab </strong></em></p>
+
+<p><em>We have some cool things happening that we want you to know about!<br><br><strong> Visit our <a href="announcements.html">Announcements</a> Tab </strong></em></p>
+
 </div>
 
 <div id="middleSection">
-<h3>We create outstanding <em>custom-made</em> costumes!</h3>
+
+<h3> <strong> We create outstanding </strong> <br> <em>custom-made</em> <a href="costumes.html">Costumes!</a></h3>
+
+<div id="middleSectionImg">
 <img src="winter-kingdom.jpg" width="250" height="459" alt=""/> </div>
 
-<footer>
-<nav id="navigationBottom"> asasa 
-</nav>
-</footer>
 </div>
+
+</div>
+
 </body>
 </html>
 
