--- a/plan.html
+++ b/plan.html
@@ -13,7 +13,7 @@
 <body>
 <h1>CP1406 - Assignment 1 - Project Plan - CossiePlay</h1>
 <p><strong>Name:</strong> Yuval Bernstein <br>
-<strong>Login:</strong> yuval.bernstein@my.jcu.edu.au</p>
+<strong>Login:</strong> jc258588 </p>
 <h2>Goals</h2>
 <p>The CossiePlay website plans to increase the production and revenue, of costumes being made and sold for the cossieplay business. This will be done by promoting the cossieplay parties that occur monthly. A higher attendance to these monthly parties will result in more customers for the business. The website will focus on increasing the current estimated attendance of 30 people and a higher production of 4 costumes per week. </p>
 <h2>Success Evaluation</h2>
