--- a/signUp.html
+++ b/signUp.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>costumes</title>
+<title>CossiePlay Party</title>
 <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -26,9 +26,9 @@
 </nav>
 </div>
 
-<h1> Costumes </h1>
+<h1> Sign Up </h1>
 
-<div id="costumesLeftPartySection">
+<div id="leftSignUpSection">
   <h3><a href="signUp.html">Sign Up! </a><em>its easy.</em></h3>
     <h3>Just email us</h3>
       <strong>Email: cossieplay@gmail.com</strong>
@@ -53,77 +53,33 @@
 
 </div>
 
+<div id="signUpPage">
+
+<h2> <em> Cosplay Party </em> </h2>
+
+<h3><strong>Held on first Saturday of every month.</strong></h3>
+<h4> Location: Town Hall. </h4>
+<p> Time: 6:00pm - 11:00pm </p>
+<p> <strong> Live DJ at the party </strong> <em> "always" </em> </p>
+<h2><strong> Entry Price: </strong></h2>
+<ul><li> Adult - $15 </li>
+    <li> Child (6-17) - $10 </li>
+    <li> kids (under 6) - Free</li></ul>
+    
+<p> <em> Each entry includes one non-alcoholic drink and a glow stick </em> </p> 
 
 
-<div id="costumePage">
 
-<h2> Costumes Table</h2>
+<h3> Party Guidelines </h3>
 
-<table>
-  <tr>
-    <th>Costume</th>
-    <th>Size</th>
-    <th>Price</th>
-    </tr>
-  <tr>
-      <td>Spiderman</td>
-      <td>12</td>
-      <td>$49</td>
-    </tr>
-  <tr>
-      <td>Elf</td>
-      <td>16</td>
-      <td>$35</td>
-    </tr>
-  <tr>
-      <td>Darth Vader</td>
-      <td>M</td>
-      <td>$149</td>
-    </tr>
-  <tr>
-      <td>Iron Man (with rocket boots)</td>
-      <td>M</td>
-      <td>$49</td>
-    </tr>
-  <tr>
-      <td>Bayonetta</td>
-      <td>8</td>
-      <td>$300</td>
-    </tr>
-  <tr>
-      <td>Diablo III - Demon Hunter</td>
-      <td>10</td>
-      <td>$250</td>
-    </tr>
-  <tr>
-      <td>Harley Quinn</td>
-      <td>18</td>
-      <td>$125</td>
-    </tr>
-  <tr>
-      <td>Metroid - Samus Aran</td>
-      <td>L</td>
-      <td>$$850</td>
-    </tr>
-  <tr>
-      <td>Peter Pan</td>
-      <td>XS</td>
-      <td>$49</td>
-    </tr>
-  <tr>
-      <td>Princess Leia (white)</td>
-      <td>10</td>
-      <td>$100</td>
-    </tr>
-   <tr>
-      <td>Spock (star Trek)</td>
-      <td>S</td>
-      <td>$1,235</td>
-    </tr>
-  </table>
-
-<img src="boromir-4-1478698.jpg" width="399" height="643" alt=""/></div>
+<p> CossiePlay party-goers party at their own risk and are responsible for their own safety. Check with your doctor before you party hard.</p>
+<p> Party fees must be paid at the door. Cash or EFTPOS accepted. Credit card payments attract a 2% surcharge.</p>
+<p> Alcohol is served at the bar to over 18s only. No intoxicated persons will be served, but will be escorted to a taxi – paid by the party-goer. </p>
 
 </div>
+
+</div>
+
 </body>
+
 </html>
