--- a/whatIs.html
+++ b/whatIs.html
@@ -7,32 +7,68 @@
 </head>
 
 <body>
+
 <div id="container">
+
 <div id="topBox">
-<header><img src="header.jpg" width="900" height="150" alt=""/></header>
+  
+  <header><img src="header.jpg" width="900" height="150" alt=""/></header>
 
 <nav id="navigationTop">
-     <ul>
-<li><a href="index.html">Home</a></li>
-<li><a href="announcements.html">Announcements</a></li>
-<li><a href="aboutus.html">About Us</a></li>
-<li><a href="costumes.html">Costumes</a></li>
-<li><a href="contacts.html">Contacts</a></li></ul>
-</nav></div>
+     <ul>    
+          <li><a href="index.html">Home</a></li>
+          <li><a href="whatIs.html">What Is Cosplay?</a></li>
+          <li><a href="signUp.html">Sign Up</a></li>
+          <li><a href="costumes.html">Costumes Shop</a></li>
+          <li><a href="announcements.html">Announcements</a></li>
+          <li><a href="aboutus.html">About Us</a></li>
+     </ul>
+</nav>
+</div>
 
-<div id="aboutUsNav">
-<nav id="insideNav"> <ul>
-<li><a href="aboutus.html">About Us</a></li>
-<li><a href="whosWho.html">CossiePlay Family</a></li>
-<li><a href="partyGuidelines.html">Party Guidelines</a></li>
-</ul></nav></div>
+<h1> What is CosPlay </h1>
+
+<div id="leftSignUpSection">
+    <h3><a href="signUp.html">Sign Up! </a><em>its easy.</em></h3>
+    <h3>Just email us</h3>
+      <strong>Email: cossieplay@gmail.com</strong>
+  
+  <ul>  
+         <li><em>Include:</em></li>
+         <li>Your Name</li>
+         <li>Phone Number</li>
+         <li>How many people are coming</li>
+  </ul>
+  
+  <img src="book-fair-678264_1280.jpg" width="250" height="167" alt=""/> 
+ 
+ <h3> Contacts </h3>
+ 
+ <ul>
+     <li> Phone: 07 4771 1234</li>
+     <li> Fax: 07-4771 1235</li>
+     <li> Address: 4 Stanton Avenue, Hulkstwon</li>
+     <li> Email: cossieplay@ gmail.com.</li>
+ </ul>
+
+  </div>
+
 
 <div id="whatIsBox">
-<h1> What is CosPlay </h1>
-<p>Cosplay, a portmanteau of the words costume play, is a performance art in which participants called cosplayers wear costumes and fashion accessories to represent a specific character. Cosplayers often interact to create a subculture and a broader use of the term "cosplay" applies to any costumed role-playing in venues apart from the stage. Any entity that lends itself to dramatic interpretation may be taken up as a subject and it is not unusual to see genders switched. Favorite sources include manga and anime, comic books and cartoons, video games, and live-action films and television series.
+
+<h2> CosPlay </h2>
+<p> <em> A combination of the words <strong> costume play,</strong></em> is a performance art in which participants called cosplayers wear costumes and fashion accessories to represent a specific character. <br><br> <em> A broader use of the term "cosplay" </em> applies to any <strong> costumed role-playing </strong> in venues apart from the stage. <strong> Any character interpretation is welcomed </strong> and it is not unusual to see genders switched. <br> <em> Favorite sources include manga and anime, comic books and cartoons, video games, and live-action films and television series.</em> <br><br>
   
-  The rapid growth in the number of people cosplaying as a hobby since 1990 has made the phenomenon a significant aspect of popular culture in Japan and some other parts of Asia and in the Western world. Cosplay events are common features of fan conventions and there are also dedicated conventions and local and international competitions, as well as social networks, websites and other forms of media centered on cosplay activities.
-  Reproduced from https://en.wikipedia.org/wiki/Cosplay</p></div>
+The rapid growth in the number of people cosplaying as a hobby since 1990 has made the phenomenon a significant aspect of popular culture in Japan and some other parts of Asia and in the Western world. Cosplay events are common features of fan conventions and there are also dedicated conventions and local and international competitions, as well as social networks, websites and other forms of media centered on cosplay activities.
+ - rephrazed from <a href="https://en.wikipedia.org/wiki/Cosplay">wikipedia</a></p>
+ 
+<h2> Links </h2>
+      <a href="https://en.wikipedia.org/wiki/Cosplay">https://en.wikipedia.org/wiki/Cosplay</a> - (Wikipedia entry for cosplay) <br>
+      <a href="http://www.cosplay.com">http://www.cosplay.com</a> - world largest cosplay community <br>
+      <a href="http://www.cosplaytutorial.com/index.php">http://www.cosplaytutorial.com/index.php</a> – resource for costumers
+
+ 
+ </div>
 
 </div>
 </body>
