--- a/index.html
+++ b/index.html
@@ -18,46 +18,55 @@
      <ul>    
           <li><a href="index.html">Home</a></li>
           <li><a href="whatIs.html">What Is Cosplay?</a></li>
-          <li><a href="signUp.html">Sign Up</a></li>
+          <li><a href="partyInfo.html">Party - Info</a></li>
           <li><a href="costumes.html">Costumes Shop</a></li>
           <li><a href="announcements.html">Announcements</a></li>
           <li><a href="aboutus.html">About Us</a></li>
      </ul>
 </nav>
+
 </div>
 
 <h1>Come Party at CossiePlay!</h1>
 
 <div id="leftSignUpSection">
-  <h3><a href="signUp.html">Sign Up! </a><em>its easy.</em></h3>
-    <h3>Just email us</h3>
-      <strong>Email: cossieplay@gmail.com</strong>
-  
-  <ul>  
-         <li><em>Include:</em></li>
-         <li>Your Name</li>
-         <li>Phone Number</li>
-         <li>How many people are coming</li>
-  </ul>
-  
-  <img src="book-fair-678264_1280.jpg" width="250" height="167" alt=""/> 
  
- <h3> Contacts </h3>
- 
- <ul>
-     <li> Phone: 07 4771 1234</li>
-     <li> Fax: 07-4771 1235</li>
-     <li> Address: 4 Stanton Avenue, Hulkstwon</li>
-     <li> Email: cossieplay@ gmail.com.</li>
- </ul>
+ <h3>Sign Up to a Cosplay <a href="partyInfo.html">Party</a><br> <em> Inlude: </em> </h3>
+   
+<p>
+  <label for="textfield"> Name: </label><br>
+  <input type="text" name="textfield" id="textfield">
+</p>
 
-  </div>
+<p>
+  <label for="textfield2">Phone Number:</label><br>
+  <input type="text" name="textfield2" id="textfield2">
+</p>
+
+<p>
+<label for="message">Number of people:</label>
+<textarea> </textarea>
+</p>
+
+<p>
+  <input type="submit" name="submit" id="submit" value="Submit">
+</p>
+
+<img src="book-fair-678264_1280.jpg" width="250" height="167" alt=""/>
+
+<p> <strong> You can also email us: </strong> <strong> <a href="cossieplay@gmail.com">cossieplay@gmail.com</a> </strong> <br><br> 
+<strong> More Contact details: </strong> 
+    <br> Phone: 07 4771 1234
+    <br> Fax: 07-4771 1235
+</p>
+
+</div>
 
 <div id="rightPartyInfoSection">
 
-<h3> CossiePlay <a href="signUp.html"> Party </a> </h3>
+<h3> CossiePlay <a href="partyInfo.html"> Party </a> </h3>
     <ul>
-      <li> Location: town hall </li>
+      <li> <strong> Location: </strong> Town Hall </li>
       <li> 4 Stanton Avenue </li>
       <li> Hulkstwon </li>
     </ul>
@@ -72,10 +81,15 @@
 
 <div id="middleSection">
 
-<h3> <strong> We create outstanding </strong> <br> <em>custom-made</em> <a href="costumes.html">Costumes!</a></h3>
+<h3> <strong> We create outstanding </strong> <br> <em>custom-made</em> <a href="costumes.html">Costumes!</a> </h3>
 
 <div id="middleSectionImg">
-<img src="winter-kingdom.jpg" width="250" height="459" alt=""/> </div>
+<img src="winter-kingdom.jpg" width="250" height="459" alt=""/>
+
+<p> <em> from simple Spiderman or Elf costumes </em> right up to <strong> costumes including advanced features like </strong> armour, animatronics, realistic weaponry and working force fields. </p>
+ </div>
+
+
 
 </div>
 
