--- a/plan.html
+++ b/plan.html
@@ -23,6 +23,6 @@
 <h2>Site Flowchart (Structure Diagram)</h2>
 <p><img src="" alt="Site Flowchart"> ... </p>
 <h2>GitHub Repository</h2>
-<p><a href="http://github.com/...">Enter your repo name and link it here</a></p>
+<p><a href="https://github.com/yuvibernstein/CossiePlay"> CossiePlay - Github Link</a></p>
 </body>
 </html>
