--- a/whatIs.html
+++ b/whatIs.html
@@ -18,40 +18,49 @@
      <ul>    
           <li><a href="index.html">Home</a></li>
           <li><a href="whatIs.html">What Is Cosplay?</a></li>
-          <li><a href="signUp.html">Sign Up</a></li>
+          <li><a href="partyInfo.html">Party - Info</a></li>
           <li><a href="costumes.html">Costumes Shop</a></li>
           <li><a href="announcements.html">Announcements</a></li>
           <li><a href="aboutus.html">About Us</a></li>
      </ul>
 </nav>
+
 </div>
 
 <h1> What is CosPlay </h1>
 
 <div id="leftSignUpSection">
-    <h3><a href="signUp.html">Sign Up! </a><em>its easy.</em></h3>
-    <h3>Just email us</h3>
-      <strong>Email: cossieplay@gmail.com</strong>
-  
-  <ul>  
-         <li><em>Include:</em></li>
-         <li>Your Name</li>
-         <li>Phone Number</li>
-         <li>How many people are coming</li>
-  </ul>
-  
-  <img src="book-fair-678264_1280.jpg" width="250" height="167" alt=""/> 
  
- <h3> Contacts </h3>
- 
- <ul>
-     <li> Phone: 07 4771 1234</li>
-     <li> Fax: 07-4771 1235</li>
-     <li> Address: 4 Stanton Avenue, Hulkstwon</li>
-     <li> Email: cossieplay@ gmail.com.</li>
- </ul>
+ <h3>Sign Up to a Cosplay <a href="partyInfo.html">Party</a><br> <em> Inlude: </em> </h3>
+   
+<p>
+  <label for="textfield"> Name: </label><br>
+  <input type="text" name="textfield" id="textfield">
+</p>
 
-  </div>
+<p>
+  <label for="textfield2">Phone Number:</label><br>
+  <input type="text" name="textfield2" id="textfield2">
+</p>
+
+<p>
+<label for="message">Number of people:</label>
+<textarea> </textarea>
+</p>
+
+<p>
+  <input type="submit" name="submit" id="submit" value="Submit">
+</p>
+
+<img src="book-fair-678264_1280.jpg" width="250" height="167" alt=""/>
+
+<p> <strong> You can also email us: </strong> <strong> <a href="cossieplay@gmail.com">cossieplay@gmail.com</a> </strong> <br><br> 
+<strong> More Contact details: </strong> 
+    <br> Phone: 07 4771 1234
+    <br> Fax: 07-4771 1235
+</p>
+
+</div>
 
 
 <div id="whatIsBox">
@@ -61,14 +70,13 @@
   
 The rapid growth in the number of people cosplaying as a hobby since 1990 has made the phenomenon a significant aspect of popular culture in Japan and some other parts of Asia and in the Western world. Cosplay events are common features of fan conventions and there are also dedicated conventions and local and international competitions, as well as social networks, websites and other forms of media centered on cosplay activities.
  - rephrazed from <a href="https://en.wikipedia.org/wiki/Cosplay">wikipedia</a></p>
- 
+<img src="boromir-4-1478698.jpg" width="186" height="300" alt=""/>  
 <h2> Links </h2>
       <a href="https://en.wikipedia.org/wiki/Cosplay">https://en.wikipedia.org/wiki/Cosplay</a> - (Wikipedia entry for cosplay) <br>
       <a href="http://www.cosplay.com">http://www.cosplay.com</a> - world largest cosplay community <br>
       <a href="http://www.cosplaytutorial.com/index.php">http://www.cosplaytutorial.com/index.php</a> – resource for costumers
 
- 
- </div>
+  </div>
 
 </div>
 </body>
