--- a/aboutus.html
+++ b/aboutus.html
@@ -18,7 +18,7 @@
      <ul>    
           <li><a href="index.html">Home</a></li>
           <li><a href="whatIs.html">What Is Cosplay?</a></li>
-          <li><a href="signUp.html">Sign Up</a></li>
+          <li><a href="partyInfo.html">Party - Info</a></li>
           <li><a href="costumes.html">Costumes Shop</a></li>
           <li><a href="announcements.html">Announcements</a></li>
           <li><a href="aboutus.html">About Us</a></li>
@@ -29,26 +29,31 @@
 <h1> About Us </h1>
 
 <div id="aboutUsLeftPartySection">
-  <h3><a href="signUp.html">Sign Up! </a><em>its easy.</em></h3>
-    <h3>Just email us</h3>
-      <strong>Email: cossieplay@gmail.com</strong>
-  
-  <ul>  
-         <li><em>Include:</em></li>
-         <li>Your Name</li>
-         <li>Phone Number</li>
-         <li>How many people are coming</li>
-  </ul>
-  <img src="book-fair-678264_1280.jpg" width="250" height="167" alt=""/> 
+  <h3>Sign Up to a Cosplay <a href="partyInfo.html">Party</a><br> <em> Inlude: </em> </h3>
+   
+<p>
+  <label for="textfield"> Name: </label><br>
+  <input type="text" name="textfield" id="textfield">
+</p>
 
-<h3> Contacts </h3>
- 
-<ul>
-    <li> Phone: 07 4771 1234</li>
-    <li> Fax: 07-4771 1235</li>
-    <li> Address: 4 Stanton Avenue, Hulkstwon</li>
-    <li> Email: cossieplay@ gmail.com.</li>
-</ul>
+<p>
+  <label for="textfield2">Phone Number:</label><br>
+  <input type="text" name="textfield2" id="textfield2">
+</p>
+
+<p>
+<label for="message">Number of people:</label>
+<textarea> </textarea>
+</p>
+
+<p>
+  <input type="submit" name="submit" id="submit" value="Submit">
+</p>
+
+<img src="book-fair-678264_1280.jpg" width="250" height="167" alt=""/>
+
+<p><em>You can also email us:</em> <strong> <a href="cossieplay@gmail.com">cossieplay@gmail.com</a> </strong> <br><br> <strong> More Contact details: </strong> <br> Phone: 07 4771 1234
+    <br> Fax: 07-4771 1235 </p>
 
 </div>
 
@@ -60,7 +65,9 @@
 <strong> We buy and sell second-hand costumes </strong>, <em> Visit </em> <a href="costumes.html">Costumes</a> tab to views these.
  
 </p>
-<br>
+
+
+
 <h2>Who's Who</h2>
 
 <h3> <strong> The CossiePlay family is </strong> </h3>
