--- a/partyInfo.html
+++ b/partyInfo.html
@@ -18,7 +18,7 @@
      <ul>    
           <li><a href="index.html">Home</a></li>
           <li><a href="whatIs.html">What Is Cosplay?</a></li>
-          <li><a href="signUp.html">Sign Up</a></li>
+          <li><a href="partyInfo.html">Party - Info</a></li>
           <li><a href="costumes.html">Costumes Shop</a></li>
           <li><a href="announcements.html">Announcements</a></li>
           <li><a href="aboutus.html">About Us</a></li>
@@ -26,34 +26,42 @@
 </nav>
 </div>
 
-<h1> Sign Up </h1>
+<h1> Party Information </h1>
 
 <div id="leftSignUpSection">
-  <h3><a href="signUp.html">Sign Up! </a><em>its easy.</em></h3>
-    <h3>Just email us</h3>
-      <strong>Email: cossieplay@gmail.com</strong>
-  
-<ul>  
-         <li><em>Include:</em></li>
-         <li>Your Name</li>
-         <li>Phone Number</li>
-         <li>How many people are coming</li>
-</ul>
+ 
+ <h3>Sign Up to a Cosplay <a href="partyInfo.html">Party</a><br> <em> Inlude: </em> </h3>
+   
+<p>
+  <label for="textfield"> Name: </label><br>
+  <input type="text" name="textfield" id="textfield">
+</p>
 
-<img src="book-fair-678264_1280.jpg" width="250" height="167" alt=""/> 
- 
-<h3> Contacts </h3>
- 
-<ul>
-    <li> Phone: 07 4771 1234</li>
-    <li> Fax: 07-4771 1235</li>
-    <li> Address: 4 Stanton Avenue, Hulkstwon</li>
-    <li> Email: cossieplay@ gmail.com.</li>
-</ul>
+<p>
+  <label for="textfield2">Phone Number:</label><br>
+  <input type="text" name="textfield2" id="textfield2">
+</p>
+
+<p>
+<label for="message">Number of people:</label>
+<textarea> </textarea>
+</p>
+
+<p>
+  <input type="submit" name="submit" id="submit" value="Submit">
+</p>
+
+<img src="book-fair-678264_1280.jpg" width="250" height="167" alt=""/>
+
+<p> <strong> You can also email us: </strong> <strong> <a href="cossieplay@gmail.com">cossieplay@gmail.com</a> </strong> <br><br> 
+<strong> More Contact details: </strong> 
+    <br> Phone: 07 4771 1234
+    <br> Fax: 07-4771 1235
+</p>
 
 </div>
 
-<div id="signUpPage">
+<div id="partyInformation">
 
 <h2> <em> Cosplay Party </em> </h2>
 
@@ -75,6 +83,8 @@
 <p> CossiePlay party-goers party at their own risk and are responsible for their own safety. Check with your doctor before you party hard.</p>
 <p> Party fees must be paid at the door. Cash or EFTPOS accepted. Credit card payments attract a 2% surcharge.</p>
 <p> Alcohol is served at the bar to over 18s only. No intoxicated persons will be served, but will be escorted to a taxi – paid by the party-goer. </p>
+
+
 
 </div>
 
