--- a/aboutus.html
+++ b/aboutus.html
@@ -19,7 +19,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="whatIs.html">What Is Cosplay?</a></li>
           <li><a href="partyInfo.html">Party - Info</a></li>
-          <li><a href="costumes.html">Costumes Shop</a></li>
+          <li><a href="costumes.html">Costume Shop</a></li>
           <li><a href="announcements.html">Announcements</a></li>
           <li><a href="aboutus.html">About Us</a></li>
      </ul>
@@ -28,8 +28,9 @@
 
 <h1> About Us </h1>
 
-<div id="aboutUsLeftPartySection">
-  <h3>Sign Up to a Cosplay <a href="partyInfo.html">Party</a><br> <em> Inlude: </em> </h3>
+<div id="leftSignUpSection">
+ 
+ <h3>Sign Up to a Cosplay <a href="partyInfo.html">Party</a><br> <em> Inlude: </em> </h3>
    
 <p>
   <label for="textfield"> Name: </label><br>
@@ -52,8 +53,11 @@
 
 <img src="book-fair-678264_1280.jpg" width="250" height="167" alt=""/>
 
-<p><em>You can also email us:</em> <strong> <a href="cossieplay@gmail.com">cossieplay@gmail.com</a> </strong> <br><br> <strong> More Contact details: </strong> <br> Phone: 07 4771 1234
-    <br> Fax: 07-4771 1235 </p>
+<p> <strong> You can also email us: </strong> <strong> <a href="cossieplay@gmail.com">cossieplay@gmail.com</a> </strong> <br><br> 
+<strong> More Contact details: </strong> 
+    <br> Phone: 07 4771 1234
+    <br> Fax: 07-4771 1235
+</p>
 
 </div>
 
@@ -61,25 +65,21 @@
 
 <h2>About CossiePlay</h2>
 
-<p>CossiePlay is a family-run business, operating in Hulkstown since 2012. <strong> Cosplayers can order any kind of costume </strong> - from simple Spiderman or elf costumes right up to costumes including advanced features like armour, animatronics, realistic weaponry and working force fields. Depending on the difficulty, <em> costumes take between 1 and 50 weeks and cost between $10 and $10,000. </em> <br>
+<p>
+CossiePlay is a family-run business, operating in Hulkstown since 2012. <strong> We create outstanding custom-made costumes. Cosplayers can order any kind of costume </strong> <em> - from simple Spiderman or elf costumes right up to costumes including advanced features like armour, animatronics, realistic weaponry and working force fields. </em> Depending on the difficulty, costumes take between 1 and 50 weeks and cost between $10 and $10,000. <br>
 <strong> We buy and sell second-hand costumes </strong>, <em> Visit </em> <a href="costumes.html">Costumes</a> tab to views these.
- 
 </p>
 
-
-
-<h2>Who's Who</h2>
-
-<h3> <strong> The CossiePlay family is </strong> </h3>
-
-<p> <strong> Steven Rogers – </strong> Steve was a Navy Seal for 37 years before getting interested in hosting parties and helping people enjoy their fantasies together in a family-friendly fun environment.</p>
+<h3><strong> The CossiePlay family is </strong></h3>
 
 <img src="SteveRogers.jpg" width="200" height="150" alt=""/>
 
-<p> <strong> Sally Rogers – </strong> After only 6 weeks of her first dress-making course, Sally was already designing and sewing elaborate ball gowns and costumes that amazed her instructors. 10 years later and she’s making even more amazing creations for happy customers.
-  (our photos are provided)</p>
+<p> <strong> Steven Rogers – </strong> Steve was a Navy Seal for 37 years before getting interested in hosting parties and helping people enjoy their fantasies together in a family-friendly fun environment.</p>
 
 <img src="SallyRogers.jpg" width="200" height="239" alt=""/>
+
+<p> <strong> Sally Rogers – </strong> After only 6 weeks of her first dress-making course, Sally was already designing and sewing elaborate ball gowns and costumes that amazed her instructors. 10 years later and she’s making even more amazing creations for happy customers.
+</p>
 
 </div>
 </div> 
