--- a/costumes.html
+++ b/costumes.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>costumes</title>
+<title>Costumes</title>
 <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -19,7 +19,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="whatIs.html">What Is Cosplay?</a></li>
           <li><a href="partyInfo.html">Party - Info</a></li>
-          <li><a href="costumes.html">Costumes Shop</a></li>
+          <li><a href="costumes.html">Costume Shop</a></li>
           <li><a href="announcements.html">Announcements</a></li>
           <li><a href="aboutus.html">About Us</a></li>
      </ul>
@@ -66,8 +66,8 @@
 
 <div id="costumePage">
 
-<h2> Costumes Table</h2>
-
+<h2> Price list </h2>
+ 
 <table>
   <tr>
     <th>Costume</th>
@@ -112,7 +112,7 @@
   <tr>
       <td>Metroid - Samus Aran</td>
       <td>L</td>
-      <td>$$850</td>
+      <td>$850</td>
     </tr>
   <tr>
       <td>Peter Pan</td>
@@ -130,6 +130,8 @@
       <td>$1,235</td>
     </tr>
   </table>
+
+<p><em> Cosplayers can order any kind of costume. Email or call us for enquiries. </em></p>
 
 </div>
 
