--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="whatIs.html">What Is Cosplay?</a></li>
           <li><a href="partyInfo.html">Party - Info</a></li>
-          <li><a href="costumes.html">Costumes Shop</a></li>
+          <li><a href="costumes.html">Costume Shop</a></li>
           <li><a href="announcements.html">Announcements</a></li>
           <li><a href="aboutus.html">About Us</a></li>
      </ul>
 </nav>
 
 </div>
-
-<h1>Come Party at CossiePlay!</h1>
+<div id="homePageHeader">
+<h1> Costume play like never befor, join the fun! </h1></div>
 
 <div id="leftSignUpSection">
  
@@ -75,7 +75,7 @@
 
 <img src="party.jpg" width="250" height="187" alt=""/>
 
-<p><em>We have some cool things happening that we want you to know about!<br><br><strong> Visit our <a href="announcements.html">Announcements</a> Tab </strong></em></p>
+<p> <strong> We have some cool things happening that we want you to know about!<br><br> Visit our <a href="announcements.html">Announcements</a> Tab </strong></p>
 
 </div>
 
@@ -89,12 +89,8 @@
 <p> <em> from simple Spiderman or Elf costumes </em> right up to <strong> costumes including advanced features like </strong> armour, animatronics, realistic weaponry and working force fields. </p>
  </div>
 
-
-
 </div>
-
 </div>
-
 </body>
 </html>
 
