--- a/announcements.html
+++ b/announcements.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>announcements</title>
+<title>Announcements</title>
 <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -19,7 +19,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="whatIs.html">What Is Cosplay?</a></li>
           <li><a href="partyInfo.html">Party - Info</a></li>
-          <li><a href="costumes.html">Costumes Shop</a></li>
+          <li><a href="costumes.html">Costume Shop</a></li>
           <li><a href="announcements.html">Announcements</a></li>
           <li><a href="aboutus.html">About Us</a></li>
      </ul>
@@ -67,7 +67,7 @@
 
    <ul>
      <li> <strong> This month you can purchase </strong> 3 drinks for the price of 2 at the bar.</li><br>
-     <li> First-time party-goers <strong> get a 50% discount </strong> on entry</li><br>
+     <li> First-time party-goers <strong> get a 50% discount </strong> on entry.</li><br>
      <li> <strong> If you get a costume custom made, </strong> your next party entry is free if you wear that costume.</li><br>
      <li> <strong> Wear your costume in to KFC on Stanton street </strong> 
          and you can get a free drink with a 21-piece bucket. <strong> Tell them you’ve been to CossiePlay! </strong></li>
