--- a/partyInfo.html
+++ b/partyInfo.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>CossiePlay Party</title>
+<title>Party Information</title>
 <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -19,7 +19,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="whatIs.html">What Is Cosplay?</a></li>
           <li><a href="partyInfo.html">Party - Info</a></li>
-          <li><a href="costumes.html">Costumes Shop</a></li>
+          <li><a href="costumes.html">Costume Shop</a></li>
           <li><a href="announcements.html">Announcements</a></li>
           <li><a href="aboutus.html">About Us</a></li>
      </ul>
@@ -63,13 +63,13 @@
 
 <div id="partyInformation">
 
-<h2> <em> Cosplay Party </em> </h2>
+<h2> Cosplay Party </h2>
 
 <h3><strong>Held on first Saturday of every month.</strong></h3>
 <h4> Location: Town Hall. </h4>
 <p> Time: 6:00pm - 11:00pm </p>
 <p> <strong> Live DJ at the party </strong> <em> "always" </em> </p>
-<h2><strong> Entry Price: </strong></h2>
+<h3><strong> Entry Price: </strong></h3>
 <ul><li> Adult - $15 </li>
     <li> Child (6-17) - $10 </li>
     <li> kids (under 6) - Free</li></ul>
@@ -77,13 +77,13 @@
 <p> <em> Each entry includes one non-alcoholic drink and a glow stick </em> </p> 
 
 
+<div id="partyGuidelines">
+<img src="party.jpg" width="250" height="187" alt=""/>
+<p> <strong> Party Guidelines </strong> <br> CossiePlay party-goers party at their own risk and are responsible for their own safety. Check with your doctor before you party hard.<br>
+ Party fees must be paid at the door. Cash or EFTPOS accepted. Credit card payments attract a 2% surcharge.<br>
+ Alcohol is served at the bar to over 18s only. No intoxicated persons will be served, but will be escorted to a taxi – paid by the party-goer. </p>
 
-<h3> Party Guidelines </h3>
-
-<p> CossiePlay party-goers party at their own risk and are responsible for their own safety. Check with your doctor before you party hard.</p>
-<p> Party fees must be paid at the door. Cash or EFTPOS accepted. Credit card payments attract a 2% surcharge.</p>
-<p> Alcohol is served at the bar to over 18s only. No intoxicated persons will be served, but will be escorted to a taxi – paid by the party-goer. </p>
-
+</div>
 
 
 </div>
