CossiePlay - final version
more change to the context have been made to make it easier for
scanning, this was done to multiple pages. Also changes to the costume
table was made. changes to the plan, making sure everything is ready for
submission.

--- a/announcements.html
+++ b/announcements.html
@@ -70,7 +70,7 @@
      <li> First-time party-goers <strong> get a 50% discount </strong> on entry.</li><br>
      <li> <strong> If you get a costume custom made, </strong> your next party entry is free if you wear that costume.</li><br>
      <li> <strong> Wear your costume in to KFC on Stanton street </strong> 
-         and you can get a free drink with a 21-piece bucket. <strong> Tell them you’ve been to CossiePlay! </strong></li>
+         and you can get a free drink with a 21-piece bucket. Tell them you’ve been to CossiePlay! </li>
    </ul>
 
 <div id="announcementsImg">
