--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
 
 </div>
 <div id="homePageHeader">
-<h1> Costume play like never befor, join the fun! </h1></div>
+<h1> Costume play like never befor, join the fun! </h1>
+</div>
 
 <div id="leftSignUpSection">
  
- <h3>Sign Up to a Cosplay <a href="partyInfo.html">Party</a><br> <em> Inlude: </em> </h3>
+<h3>Sign Up to a Cosplay <a href="partyInfo.html">Party</a><br> <em> Inlude: </em> </h3>
    
 <p>
   <label for="textfield"> Name: </label><br>
@@ -68,7 +69,7 @@
     <ul>
       <li> <strong> Location: </strong> Town Hall </li>
       <li> 4 Stanton Avenue </li>
-      <li> Hulkstwon </li>
+      <li> Hulkstown </li>
     </ul>
   
 <h3>On the first Saturday of every month! </h3>
