--- a/partyInfo.html
+++ b/partyInfo.html
@@ -67,7 +67,7 @@
 
 <h3><strong>Held on first Saturday of every month.</strong></h3>
 <h4> Location: Town Hall. </h4>
-<p> Time: 6:00pm - 11:00pm </p>
+<p> <strong> Time: </strong> 6:00pm - 11:00pm </p>
 <p> <strong> Live DJ at the party </strong> <em> "always" </em> </p>
 <h3><strong> Entry Price: </strong></h3>
 <ul><li> Adult - $15 </li>
@@ -75,7 +75,6 @@
     <li> kids (under 6) - Free</li></ul>
     
 <p> <em> Each entry includes one non-alcoholic drink and a glow stick </em> </p> 
-
 
 <div id="partyGuidelines">
 <img src="party.jpg" width="250" height="187" alt=""/>
@@ -85,11 +84,7 @@
 
 </div>
 
-
 </div>
-
 </div>
-
 </body>
-
 </html>
