--- a/whatIs.html
+++ b/whatIs.html
@@ -62,21 +62,21 @@
 
 </div>
 
-
 <div id="whatIsBox">
 
 <h2> CosPlay </h2>
-<p> <em> A combination of the words <strong> costume play,</strong></em> is a performance art in which participants called cosplayers wear costumes and fashion accessories to represent a specific character. <br><br> <em> A broader use of the term "cosplay" </em> applies to any <strong> costumed role-playing </strong> in venues apart from the stage. <strong> Any character interpretation is welcomed </strong> and it is not unusual to see genders switched. <br> <em> Favorite sources include manga and anime, comic books and cartoons, video games, and live-action films and television series.</em> <br><br>
+<p> <em> A combination of the words <strong> costume play,</strong></em> is a performance art in which participants called <strong> cosplayers wear costumes and fashion accessories </strong> to represent a specific character. <br><br> <strong> A broader use of the term "cosplay" </strong> applies to any <strong> costumed role-playing </strong> in venues apart from the stage. <strong> Any character interpretation is welcomed </strong> and it is not unusual to see genders switched. <br> <strong> Favorite sources include manga and anime, comic books and cartoons, video games, and live-action films and television series.</strong> <br><br>
   
 The rapid growth in the number of people cosplaying as a hobby since 1990 has made the phenomenon a significant aspect of popular culture in Japan and some other parts of Asia and in the Western world. Cosplay events are common features of fan conventions and there are also dedicated conventions and local and international competitions, as well as social networks, websites and other forms of media centered on cosplay activities.
  - rephrazed from <a href="https://en.wikipedia.org/wiki/Cosplay">wikipedia</a></p>
 <img src="boromir-4-1478698.jpg" width="186" height="300" alt=""/>  
+
 <h2> Links </h2>
       <a href="https://en.wikipedia.org/wiki/Cosplay">https://en.wikipedia.org/wiki/Cosplay</a> - (Wikipedia entry for cosplay) <br>
       <a href="http://www.cosplay.com">http://www.cosplay.com</a> - world largest cosplay community <br>
       <a href="http://www.cosplaytutorial.com/index.php">http://www.cosplaytutorial.com/index.php</a> – resource for costumers
 
-  </div>
+</div>
 
 </div>
 </body>
